# public/openapi.json
@@ -90,7 +90,7 @@
         "tags": ["Ping"]
       }
     },
-    "/records": {
+    "records/": {
       "get": {
         "operationId": "RecordController.find",
         "parameters": [{ "in": "query", "name": "opt", "required": false, "schema": {} }],
@@ -129,7 +129,7 @@
         "tags": ["Record"]
       }
     },
-    "/records/count": {
+    "records/count": {
       "get": {
         "operationId": "RecordController.count",
         "parameters": [{ "in": "query", "name": "opt", "required": false, "schema": {} }],
@@ -143,7 +143,7 @@
         "tags": ["Record"]
       }
     },
-    "/records/{id}": {
+    "records/{id}": {
       "get": {
         "operationId": "RecordController.findById",
         "parameters": [
@@ -179,7 +179,7 @@
         "tags": ["Record"]
       }
     },
-    "/records/upsert": {
+    "records/upsert": {
       "post": {
         "operationId": "RecordController.upsert",
         "requestBody": {
@@ -192,9 +192,9 @@
         "tags": ["Record"]
       }
     },
-    "/recordsByLike": {
+    "records/getByLike": {
       "get": {
-        "operationId": "RecordController.getRecordsByLike",
+        "operationId": "RecordController.getByLike",
         "parameters": [
           { "in": "query", "name": "content", "schema": { "type": "string" } },
           { "in": "query", "name": "name", "schema": { "type": "string" } }
@@ -211,7 +211,7 @@
         "tags": ["Record"]
       }
     },
-    "/records/deleteAndCreate/{id}": {
+    "records/deleteAndCreate/{id}": {
       "post": {
         "operationId": "RecordController.deleteAndCreate",
         "parameters": [{ "in": "path", "name": "id", "required": true, "schema": { "type": "number" } }],
